setups, add packages, types definitions, configure redux, add material

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,20 @@
+$maincolor: #BADA55;
+$bg-color: #0f0964;
+
 .App {
   text-align: center;
+  background-color: $bg-color;
+  height: 80vh;
+  .App-header {
+    background-color: $maincolor;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
 }
 
 .App-logo {
@@ -13,16 +28,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
